Added ClientViewModel and ProjectViewModel. ViewModels contain commands for use in ClientProjectView

--- a/MAUI.ClientProjectManagement/MAUI.ClientProjectManagement.csproj
+++ b/MAUI.ClientProjectManagement/MAUI.ClientProjectManagement.csproj
@@ -102,6 +102,9 @@
 	  <MauiXaml Update="Views\EditClientView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\TimerView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
